test/arrays/bradc/slices/sliceStridedArray.good
A is:
11 13 15 17 19
31 33 35 37 39
51 53 55 57 59
71 73 75 77 79
91 93 95 97 99

A[<slice>] is:


A[<slice>] is:
11 13 15 17 19
31 33 35 37 39
51 53 55 57 59
71 73 75 77 79
91 93 95 97 99

sliceArray.chpl:17: error: halt reached - range slice out of bounds: 0..9
