test/arrays/bradc/slices/sliceStridedArray.future
unimplemented feature: slicing strided domains/arrays

See types/range/bradc/strideRangeSlice2.future and
domains/bradc/slices/sliceStridedArray.future

